Fixing the open source build.
PiperOrigin-RevId: 191640973
GitOrigin-RevId: e1253df8c8c78a305d746a48778e1aed07cd48fe

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -4,8 +4,12 @@ java_library(
     name = "utils",
     srcs = [
         "java/com/google/security/wycheproof/EcUtil.java",
+        "java/com/google/security/wycheproof/JsonUtil.java",
         "java/com/google/security/wycheproof/RandomUtil.java",
         "java/com/google/security/wycheproof/TestUtil.java",
+    ],
+    deps = [
+        "@com_google_code_gson",
     ],
 )
 
@@ -20,9 +24,8 @@ test_srcs = glob([
     "java/**/testcases/*Test.java",
 ])
 
-# These targets run all tests.
-
-load("//tools:build_defs.bzl", "bouncycastle_all_tests", "spongycastle_all_tests")
+# Bouncy Castle tests
+load("//tools:build_defs.bzl", "bouncycastle_all_tests", "bouncycastle_tests")
 
 # Generates BouncyCastleAllTests_1_xx target for all available versions,
 # plus a BouncyCastleAllTests alias for latest stable.
@@ -37,7 +40,7 @@ load("//tools:build_defs.bzl", "bouncycastle_all_tests", "spongycastle_all_tests
 # $ bazel test BouncyCastleAllTest_*
 bouncycastle_all_tests(
     # This test takes a long time, because key generation for DSA and DH generate new parameters.
-    size = "large",
+    size = "enormous",
     srcs = ["java/com/google/security/wycheproof/BouncyCastleAllTests.java"] + test_srcs,
     test_class = "com.google.security.wycheproof.BouncyCastleAllTests",
     deps = common_deps,
@@ -45,7 +48,7 @@ bouncycastle_all_tests(
 
 java_test(
     name = "BouncyCastleAllTestsLocal",
-    size = "large",
+    size = "enormous",
     srcs = ["java/com/google/security/wycheproof/BouncyCastleAllTests.java"] + test_srcs,
     # this target requires specifing a shell variable, thus won't work with the wildcard target patterns.
     # with tags=["manual"] it'll be excluded from said patterns.
@@ -53,29 +56,6 @@ java_test(
     test_class = "com.google.security.wycheproof.BouncyCastleAllTests",
     deps = common_deps + ["@local//:bouncycastle_jar"],
 )
-
-# Generates SpongyCastleAllTests_1_xx target for all available versions,
-# plus a SpongyCastleAllTests alias for latest stable.
-#
-# To test latest stable:
-# $ bazel test SpongyCastleAllTests
-#
-# To test other versions, e.g., v1.52.0.0:
-# $ bazel test SpongyCastleAllTests_1_52
-#
-# To test all known versions (warning, will take a long time):
-# $ bazel test SpongyCastleAllTests_*
-spongycastle_all_tests(
-    # This test takes a long time, because key generation for DSA and DH generate new parameters.
-    size = "large",
-    srcs = ["java/com/google/security/wycheproof/SpongyCastleAllTests.java"] + test_srcs,
-    test_class = "com.google.security.wycheproof.SpongyCastleAllTests",
-    deps = common_deps,
-)
-
-# These targets exclude slow tests.
-
-load("//tools:build_defs.bzl", "bouncycastle_tests", "spongycastle_tests")
 
 # Generates BouncyCastleTest_1_xx target for all available versions,
 # plus a BouncyCastleTest alias for latest stable.
@@ -104,6 +84,28 @@ java_test(
     tags = ["manual"],
     test_class = "com.google.security.wycheproof.BouncyCastleTest",
     deps = common_deps + ["@local//:bouncycastle_jar"],
+)
+
+# Spongy Castle tests
+load("//tools:build_defs.bzl", "spongycastle_all_tests", "spongycastle_tests")
+
+# Generates SpongyCastleAllTests_1_xx target for all available versions,
+# plus a SpongyCastleAllTests alias for latest stable.
+#
+# To test latest stable:
+# $ bazel test SpongyCastleAllTests
+#
+# To test other versions, e.g., v1.52.0.0:
+# $ bazel test SpongyCastleAllTests_1_52
+#
+# To test all known versions (warning, will take a long time):
+# $ bazel test SpongyCastleAllTests_*
+spongycastle_all_tests(
+    # This test takes a long time, because key generation for DSA and DH generate new parameters.
+    size = "enormous",
+    srcs = ["java/com/google/security/wycheproof/SpongyCastleAllTests.java"] + test_srcs,
+    test_class = "com.google.security.wycheproof.SpongyCastleAllTests",
+    deps = common_deps,
 )
 
 # Generates SpongyCastleTest_1_xx target for all available versions,
@@ -135,7 +137,7 @@ conscrypt_tests(
 )
 
 conscrypt_all_tests(
-    size = "large",
+    size = "enormous",
     srcs = ["java/com/google/security/wycheproof/ConscryptAllTests.java"] + test_srcs,
     test_class = "com.google.security.wycheproof.ConscryptAllTests",
     deps = common_deps,
@@ -166,18 +168,7 @@ java_test(
     deps = common_deps,
 )
 
-# Tests using JSON formatted test vectors.
-
-java_test(
-    name = "JsonTest",
-    size = "small",
-    srcs = ["java/com/google/security/wycheproof/JsonTest.java"] + test_srcs,
-    data = ["//testvectors:all"],
-    deps = common_deps,
-)
-
-# javascript
-
+# WebCrypto Javascript tests
 load("@io_bazel_rules_closure//closure:defs.bzl", "closure_js_deps")
 
 closure_js_deps(
