Fixing tests that depend on JSON test vectors.
Also fixing doc links in open source (see #48).

PiperOrigin-RevId: 191699981
GitOrigin-RevId: e5a0caaf2d794dce378d1c4efefe36a36d2048f7

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,3 +1,7 @@
+testdata = [
+    "//testvectors:all",
+]
+
 # java
 
 java_library(
@@ -44,6 +48,7 @@ bouncycastle_all_tests(
     srcs = ["java/com/google/security/wycheproof/BouncyCastleAllTests.java"] + test_srcs,
     test_class = "com.google.security.wycheproof.BouncyCastleAllTests",
     deps = common_deps,
+    data = testdata,
 )
 
 java_test(
@@ -55,6 +60,7 @@ java_test(
     tags = ["manual"],
     test_class = "com.google.security.wycheproof.BouncyCastleAllTests",
     deps = common_deps + ["@local//:bouncycastle_jar"],
+    data = testdata,
 )
 
 # Generates BouncyCastleTest_1_xx target for all available versions,
@@ -73,6 +79,7 @@ bouncycastle_tests(
     srcs = ["java/com/google/security/wycheproof/BouncyCastleTest.java"] + test_srcs,
     test_class = "com.google.security.wycheproof.BouncyCastleTest",
     deps = common_deps,
+    data = testdata,
 )
 
 java_test(
@@ -84,6 +91,7 @@ java_test(
     tags = ["manual"],
     test_class = "com.google.security.wycheproof.BouncyCastleTest",
     deps = common_deps + ["@local//:bouncycastle_jar"],
+    data = testdata,
 )
 
 # Spongy Castle tests
@@ -106,6 +114,7 @@ spongycastle_all_tests(
     srcs = ["java/com/google/security/wycheproof/SpongyCastleAllTests.java"] + test_srcs,
     test_class = "com.google.security.wycheproof.SpongyCastleAllTests",
     deps = common_deps,
+    data = testdata,
 )
 
 # Generates SpongyCastleTest_1_xx target for all available versions,
@@ -124,6 +133,7 @@ spongycastle_tests(
     srcs = ["java/com/google/security/wycheproof/SpongyCastleTest.java"] + test_srcs,
     test_class = "com.google.security.wycheproof.SpongyCastleTest",
     deps = common_deps,
+    data = testdata,
 )
 
 # Conscrypt tests
@@ -134,6 +144,7 @@ conscrypt_tests(
     srcs = ["java/com/google/security/wycheproof/ConscryptTest.java"] + test_srcs,
     test_class = "com.google.security.wycheproof.ConscryptTest",
     deps = common_deps,
+    data = testdata,
 )
 
 conscrypt_all_tests(
@@ -141,6 +152,7 @@ conscrypt_all_tests(
     srcs = ["java/com/google/security/wycheproof/ConscryptAllTests.java"] + test_srcs,
     test_class = "com.google.security.wycheproof.ConscryptAllTests",
     deps = common_deps,
+    data = testdata,
 )
 
 # OpenJDK tests
@@ -150,6 +162,7 @@ java_test(
     srcs = ["java/com/google/security/wycheproof/OpenJDKTest.java"] + test_srcs,
     test_class = "com.google.security.wycheproof.OpenJDKTest",
     deps = common_deps,
+    data = testdata,
 )
 
 java_test(
@@ -158,6 +171,7 @@ java_test(
     srcs = ["java/com/google/security/wycheproof/OpenJDKAllTests.java"] + test_srcs,
     test_class = "com.google.security.wycheproof.OpenJDKAllTests",
     deps = common_deps,
+    data = testdata,
 )
 
 # Platform-independent tests
@@ -166,6 +180,7 @@ java_test(
     size = "small",
     srcs = ["java/com/google/security/wycheproof/ProviderIndependentTest.java"] + test_srcs,
     deps = common_deps,
+    data = testdata,
 )
 
 # WebCrypto Javascript tests
