--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -190,3 +190,14 @@ closure_js_deps(
     name = "E2EDeps",
     deps = ["@google_e2e//:e2e"],
 )
+
+load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
+#load("@bazel_gazelle//:def.bzl", "gazelle")
+
+# Go Cipher tests
+go_test(
+    name = "go_default_test",
+    srcs = ["go/src/github.com/jhoyla/wycheproof/aes_gcm_test.go"],
+    size = "small",
+    data = testdata,
+)
