--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -159,7 +159,7 @@ conscrypt_all_tests(
 load("//tools:build_defs.bzl", "accp_tests", "accp_all_tests")
 
 accp_tests(
-    size = "large",
+    size = "enormous",
     srcs = ["java/com/google/security/wycheproof/AccpTest.java"] + test_srcs,
     test_class = "com.google.security.wycheproof.AccpTest",
     deps = common_deps,
@@ -168,7 +168,7 @@ accp_tests(
 
 java_test(
     name = "AccpTestLocal",
-    size = "large",
+    size = "enormous",
     srcs = ["java/com/google/security/wycheproof/AccpTest.java"] + test_srcs,
     # this target requires specifing a shell variable, thus won't work with the wildcard target patterns.
     # with tags=["manual"] it'll be excluded from said patterns.
