--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -4,9 +4,7 @@ load("//tools:build_defs.bzl", "accp_all_tests", "accp_tests", "bouncycastle_all
 # WebCrypto Javascript tests
 load("@io_bazel_rules_closure//closure:defs.bzl", "closure_js_deps")
 
-testdata = [
-    "//testvectors:all",
-]
+testvectors = ["//testvectors:all"]
 
 # java
 
@@ -52,7 +50,7 @@ bouncycastle_all_tests(
     # This test takes a long time, because key generation for DSA and DH generate new parameters.
     size = "enormous",
     srcs = ["java/com/google/security/wycheproof/BouncyCastleAllTests.java"] + test_srcs,
-    data = testdata,
+    data = testvectors,
     test_class = "com.google.security.wycheproof.BouncyCastleAllTests",
     deps = common_deps,
 )
@@ -61,7 +59,7 @@ java_test(
     name = "BouncyCastleAllTestsLocal",
     size = "enormous",
     srcs = ["java/com/google/security/wycheproof/BouncyCastleAllTests.java"] + test_srcs,
-    data = testdata,
+    data = testvectors,
     # this target requires specifing a shell variable, thus won't work with the wildcard target patterns.
     # with tags=["manual"] it'll be excluded from said patterns.
     tags = ["manual"],
@@ -83,7 +81,7 @@ java_test(
 bouncycastle_tests(
     size = "large",
     srcs = ["java/com/google/security/wycheproof/BouncyCastleTest.java"] + test_srcs,
-    data = testdata,
+    data = testvectors,
     test_class = "com.google.security.wycheproof.BouncyCastleTest",
     deps = common_deps,
 )
@@ -92,7 +90,7 @@ java_test(
     name = "BouncyCastleTestLocal",
     size = "large",
     srcs = ["java/com/google/security/wycheproof/BouncyCastleTest.java"] + test_srcs,
-    data = testdata,
+    data = testvectors,
     # this target requires specifing a shell variable, thus won't work with the wildcard target patterns.
     # with tags=["manual"] it'll be excluded from said patterns.
     tags = ["manual"],
@@ -115,7 +113,7 @@ spongycastle_all_tests(
     # This test takes a long time, because key generation for DSA and DH generate new parameters.
     size = "enormous",
     srcs = ["java/com/google/security/wycheproof/SpongyCastleAllTests.java"] + test_srcs,
-    data = testdata,
+    data = testvectors,
     test_class = "com.google.security.wycheproof.SpongyCastleAllTests",
     deps = common_deps,
 )
@@ -134,7 +132,7 @@ spongycastle_all_tests(
 spongycastle_tests(
     size = "large",
     srcs = ["java/com/google/security/wycheproof/SpongyCastleTest.java"] + test_srcs,
-    data = testdata,
+    data = testvectors,
     test_class = "com.google.security.wycheproof.SpongyCastleTest",
     deps = common_deps,
 )
@@ -142,7 +140,7 @@ spongycastle_tests(
 conscrypt_tests(
     size = "large",
     srcs = ["java/com/google/security/wycheproof/ConscryptTest.java"] + test_srcs,
-    data = testdata,
+    data = testvectors,
     test_class = "com.google.security.wycheproof.ConscryptTest",
     deps = common_deps,
 )
@@ -150,7 +148,7 @@ conscrypt_tests(
 conscrypt_all_tests(
     size = "enormous",
     srcs = ["java/com/google/security/wycheproof/ConscryptAllTests.java"] + test_srcs,
-    data = testdata,
+    data = testvectors,
     test_class = "com.google.security.wycheproof.ConscryptAllTests",
     deps = common_deps,
 )
@@ -158,7 +156,7 @@ conscrypt_all_tests(
 accp_tests(
     size = "enormous",
     srcs = ["java/com/google/security/wycheproof/AccpTest.java"] + test_srcs,
-    data = testdata,
+    data = testvectors,
     test_class = "com.google.security.wycheproof.AccpTest",
     deps = common_deps,
 )
@@ -167,7 +165,7 @@ java_test(
     name = "AccpTestLocal",
     size = "enormous",
     srcs = ["java/com/google/security/wycheproof/AccpTest.java"] + test_srcs,
-    data = testdata,
+    data = testvectors,
     # this target requires specifing a shell variable, thus won't work with the wildcard target patterns.
     # with tags=["manual"] it'll be excluded from said patterns.
     tags = ["manual"],
@@ -178,7 +176,7 @@ java_test(
 accp_all_tests(
     size = "enormous",
     srcs = ["java/com/google/security/wycheproof/AccpAllTests.java"] + test_srcs,
-    data = testdata,
+    data = testvectors,
     test_class = "com.google.security.wycheproof.AccpAllTests",
     deps = common_deps,
 )
@@ -187,7 +185,7 @@ java_test(
     name = "AccpAllTestsLocal",
     size = "enormous",
     srcs = ["java/com/google/security/wycheproof/AccpAllTests.java"] + test_srcs,
-    data = testdata,
+    data = testvectors,
     # this target requires specifing a shell variable, thus won't work with the wildcard target patterns.
     # with tags=["manual"] it'll be excluded from said patterns.
     tags = ["manual"],
@@ -200,7 +198,7 @@ java_test(
     name = "OpenJDKTest",
     size = "large",
     srcs = ["java/com/google/security/wycheproof/OpenJDKTest.java"] + test_srcs,
-    data = testdata,
+    data = testvectors,
     test_class = "com.google.security.wycheproof.OpenJDKTest",
     deps = common_deps,
 )
@@ -209,7 +207,7 @@ java_test(
     name = "OpenJDKAllTests",
     size = "large",
     srcs = ["java/com/google/security/wycheproof/OpenJDKAllTests.java"] + test_srcs,
-    data = testdata,
+    data = testvectors,
     test_class = "com.google.security.wycheproof.OpenJDKAllTests",
     deps = common_deps,
 )
@@ -219,7 +217,7 @@ java_test(
     name = "ProviderIndependentTest",
     size = "small",
     srcs = ["java/com/google/security/wycheproof/ProviderIndependentTest.java"] + test_srcs,
-    data = testdata,
+    data = testvectors,
     deps = common_deps,
 )
 
