Fix Wycheproof Bazel test invocations in Kokoro jobs.
 * Make Kokoro presubmit and continuous tests share common test execution. This will avoid surprises where presubmits tests pass but continuous tests fail.
 * Only ignore exit code 3 from "bazel test" executions.
 * Test a small, representative subset of the tests to facilitate quick presubmit/continuous executions. Full tests will be setup in a separate, scheduled Kokoro job in a follow up change.
 * List all configured build targets. This facilitate spot checking the Bazel configuration without actually executing all the tests (e.g. when adding new versions of libraries to be tested).
 * Update build targets and Java tests to use testvectors_v1.

NOKEYCHECK=True
PiperOrigin-RevId: 493953897

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -4,7 +4,7 @@ load("//tools:build_defs.bzl", "accp_all_tests", "accp_tests", "bouncycastle_all
 # WebCrypto Javascript tests
 load("@io_bazel_rules_closure//closure:defs.bzl", "closure_js_deps")
 
-testvectors = ["//testvectors:all"]
+testvectors = ["//testvectors_v1:all"]
 
 # java
 
