--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
         {
             "name": "Scott Arciszewski",
             "email": "scott.arciszewski@trailofbits.com",
-            "homepage": "https://github.con/tob-scott-a"
+            "homepage": "https://github.com/tob-scott-a"
         }
     ],
     "type": "library",
