tools: lint x25519/x448 twist flag

--- a/.github/workflows/vectorlint.yml
+++ b/.github/workflows/vectorlint.yml
@@ -39,3 +39,6 @@ jobs:
 
       - name: Run vectorlint
         run: go run ./tools/vectorlint
+
+      - name: Run twistcheck
+        run: go run ./tools/twistcheck
