tools: smoke test generating Go from JSON schemas
Use go-jsonschema to generate Go code from the JSON schemas. We
explicitly don't want to distribute that generated code, but it's
helpful to verify that at least one tool is able to do codegen without
error from the schema files.

By asserting that there are no warnings we also catch cases where
identical schema object names result in duplicate type definitions that
require clunky suffixing. This is a strong indicator there's schema
elements we should de-duplicate and catching these early helps make the
schemas _and_ the generated code better.

--- a/.github/workflows/vectorlint.yml
+++ b/.github/workflows/vectorlint.yml
@@ -42,3 +42,6 @@ jobs:
 
       - name: Run twistcheck
         run: go run ./tools/twistcheck
+
+      - name: Run schemagen
+        run: go run ./tools/schemagen
